fix aboutMePic width on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -875,3 +875,10 @@ li {
     text-align: center;
   }
 }
+
+@media screen and (max-width: 800px) {
+  #aboutMePic {
+    display: block;
+    max-width: 60vw;
+  }
+}
